# Sched_LLM

./: README.md  requirements.txt
Sched_LLM(F)/: index.html  package-lock.json  package.json
Sched_LLM(F)/src/: App.tsx  types.ts
Sched_LLM(F)/src-tauri/: tauri.conf.json
Sched_LLM_F/: package-lock.json  package.json
Sched_LLM_F/src/: App.tsx  styles.css  types.ts
Sched_LLM_F/src-tauri/: Cargo.toml  build.rs
app/: config.py  main.py
app/api/: routes_schedule.py  routes_simulation.py
app/core/: dispatcher.py  evaluator.py  math_optimizer.py  ppo_scheduler.py  scheduler.py  simulator.py  transport_scheduler.py
app/llm/: memory.py  ollama_client.py  prompt_builder.py  response_parser.py
app/models/: job.py  schema.py  state.py
backend/: requirements.txt  run_matlab_config.py  test_llm.py
backend/app/: config.py  main.py
backend/data/: fjsp_backend_test_report.json  jobs.json  layout.json  mk_brandimarte_comparison.json  mk_brandimarte_comparison_adapt.json  mk_cmp_tune_a.json  mk_cmp_tune_b.json  mk_cmp_tune_c.json  transport.json  valve_benchmark_multi_trial.json  valve_benchmark_results.json  valve_experiment_payload_1x.json  valve_payload_10x.json  valve_payload_15x.json  valve_payload_1x.json  valve_payload_30x.json  valve_payload_5x.json  论文_章节内容草稿.txt
backend/experiments/: batch_distill_fjsp.py  combine_mk06_gantt_svgs.py  compare_mk_framework.py  draw_research_framework.py  exp1_baseline.py  fjsp_case_runner.py  fjsp_plotting.py  mk06_gantt.py  (+4 more)
data/: last_policy_id.txt  machines.json  ppo_policies.json
experiments/: exp1_baseline.py
(+51 files in other folders)
