[package]
name = "sched_llm_tauri_client"
version = "0.1.0"
description = "Tauri desktop client for Sched_LLM"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
